# Denarii

./: .bazelrc  .gitignore  .gitmodules  .windows_bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-denarii  bazel-out  bazel-testlogs  common.py  configure.py  configure_win.py  flags.py  libunwind.h  prepend_to_gzguts.txt  test.cc  top_of_gzguts.txt  trezor_common_build_file.txt  trezor_common_workspace_file.txt  workspace_path_finder.py
.github/workflows/: bazel_mac.yml  bazel_ubuntu.yml  bazel_windows.yml  build.yml
Protobuf/TextProto/: BUILD
Protobuf/Timestamp/: BUILD
bazel/: curl.bzl
client/Denarii/: BUILD  denarii_client.py
cmake/: Version.cmake
contrib/brew/: Brewfile
contrib/epee/: BUILD
examples/: BUILD  asio_stuff.cpp  include_this.cpp  include_this.h  lvalue_issue.cpp  randomx_stuff.cpp  randomx_stuff.h
external_openssl/: BUILD.bazel  MODULE.bazel  WORKSPACE
misc/: BUILD  asio_stuff.cpp  broken_entry.cpp  include_this.h  miscellaneous.cpp
src/: BUILD  cannot_catch_boost_interrupt.cpp  cannot_catch_exception.cpp  cryptonote_config.h  example_of_error.cpp  version.cpp  what_is_argv.cpp
src/blockchain_db/: BUILD  blockchain_db.cpp  blockchain_db.h
src/blockchain_utilities/: BUILD  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: BUILD  blocks.h  generated_checkpoints.c  generated_stagenet_blocks.c  generated_testnet_blocks.c
src/centralnode/: BUILD  critical_values.textpb  dynamic_critical_values.cpp  dynamic_critical_values.h
src/checkpoints/: BUILD  checkpoints.cpp  checkpoints.h
src/common/: BUILD  aligned.c  apply_permutation.h  base58.cpp  boost_serialization_helper.h  command_line.cpp  command_line.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  expect.cpp  expect.h  http_connection.h  i18n.cpp  i18n.h  notify.cpp  notify.h  password.h  perf_timer.cpp  perf_timer.h  portable_binary_oarchive.hpp  pruning.cpp  rpc_client.h  scoped_message_writer.h  spawn.cpp  spawn.h  stack_trace.cpp  stack_trace.h  threadpool.cpp  threadpool.h  timings.cc  updates.cpp  updates.h  util.cpp  util.h
src/crypto/: BUILD  CryptonightR_JIT.c  CryptonightR_template.S  aesb.c  blake256.c  chacha.c  chacha.h  crypto-ops.c  crypto.cpp  crypto.h  duration.h  generic-ops.h  groestl_tables.h  hash-ops.h  hash.h  hmac-keccak.c  keccak.c  oaes_lib.c  rx-slow-hash.c  skein_port.h  slow-hash.c
src/cryptonote_basic/: BUILD  account.cpp  account.h  blobdatatype.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  difficulty.h  events.h  hardfork.cpp  hardfork.h  miner.cpp  miner.h  portable_binary_iarchive.hpp  subaddress_index.h  verification_context.h
src/cryptonote_core/: BUILD  blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_core_common.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  i_core_events.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h
src/cryptonote_protocol/: BUILD  block_queue.cpp  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  levin_notify.cpp  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: BUILD  daemonizer.h  posix_daemonizer.inl  posix_fork.cpp  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: BUILD  cn_deserialize.cpp  dns_checks.cpp  object_sizes.cpp
src/device/: BUILD  device.cpp  device.hpp  device_cold.hpp  device_default.cpp  device_ledger.cpp  device_ledger.hpp  log.cpp  log.hpp
src/device_trezor/: BUILD  device_trezor.hpp  device_trezor_base.cpp  device_trezor_base.hpp  trezor.hpp
src/gen_multisig/: BUILD  gen_multisig.cpp
src/gen_ssl_cert/: BUILD  gen_ssl_cert.cpp
src/hardforks/: BUILD  hardforks.cpp
src/lmdb/: BUILD  database.cpp  database.h  error.cpp  key_stream.h  table.h  transaction.h  util.h  value_stream.cpp  value_stream.h
src/mnemonics/: BUILD  electrum-words.cpp  electrum-words.h  language_base.h
tests/: BUILD  README.md  benchmark.cpp  benchmark.h  hash-target.cpp  run_monero_tests.py
translations/: BUILD  generate_translations_header.c  monero_de.qm  monero_es.qm  monero_fr.qm  monero_hi.qm  monero_it.qm  monero_ja.qm  monero_nl.qm  monero_pl.qm  monero_pt-br.qm  monero_sk.qm  monero_sv.qm  translation_files.h
utils/gui/: BUILD  BUILD.bazel  README.md  button_group.py  buy_denarii_screen.py  constants.py  create_wallet_screen.py  credit_card_info_screen.py  denarii_client_testing.py  denarii_gui_e2e_tests.py  denarii_gui_integration_tests.py  denarii_gui_tests.py  denarii_mobile_client.py  denarii_mobile_client_testing.py  denarii_testing_button_group.py  denarii_testing_clicked.py  denarii_testing_font.py  denarii_testing_icon.py  denarii_testing_label.py  denarii_testing_line_edit.py  denarii_testing_main.py  denarii_testing_message_box.py  denarii_testing_pixmap.py  denarii_testing_plain_text_edit.py  denarii_testing_push_button.py  denarii_testing_qt.py  denarii_testing_radio_button.py  denarii_testing_size.py  denarii_testing_toggled.py  denarii_testing_widget.py  denarii_testing_window.py  font.py  gui_main.py  gui_user.proto  gui_user.py  icon.py  identifier.proto  input_pattern_validator.py  label.py  lang_select_screen.py  (+34 more)
utils/gui/proto/: BUILD  gui_user.proto
utils/gui/templates/: screen.py
(+412 files in other folders)
