###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "denarii",
    version = "2.0",
)

bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")

bazel_dep(name = "boost.asio", version = "1.83.0.bzl.3")
bazel_dep(name = "boost.assign", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.chrono", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.filesystem", version = "1.83.0.bzl.3")
bazel_dep(name = "boost.thread", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.multiprecision", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.interprocess", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.mpl", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.uuid", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.program_options", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.regex", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.serialization", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.system", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.scope_exit", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.date_time", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.format", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.multi_index", version = "1.83.0.bzl.1")
# Used to get boost tribool
bazel_dep(name = "boost.core", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.crc", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.locale", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.lambda", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.spirit", version = "1.83.0.bzl.1")
