load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
  name = "images", 
  srcs = ["red_x.png", "plus_icon.png"]
)

py_library(
  name = "constants",
  srcs = ["constants.py"],
  deps = [":workspace_path_finder"],
  imports = [":workspace_path_finder"]
)

py_library(
  name = "workspace_path_finder",
  srcs = ["workspace_path_finder.py"],
  deps = [],
  imports = []
)

py_library(
  name = "testing_gui_elements",
  srcs = glob(["denarii_testing*.py"]), 
  deps = [":constants"], 
  imports = [":constants"],
)

py_library(
  name = "testing_clients", 
  srcs = ["denarii_client_testing.py", "denarii_mobile_client_testing.py"],
  deps = [":constants"], 
  imports = [":constants"],
)

py_library(
  name = "clients",
  srcs = ["denarii_client.py", "denarii_mobile_client.py"],
  deps = [":workspace_path_finder"],
  imports = [":workspace_path_finder"]
)

py_library(
    name = "other_gui",
    srcs = glob(
      [
      "*.py"
      ], exclude = [
        "gui_main.py", "*_pb2.py", "*test*.py", "constants.py",
        "workspace_path_finder.py", "denarii_client.py", "denarii_mobile_client.py"
    ]),
    deps = [":testing_clients", ":clients"],
    imports = [":testing_clients", ":clients"], 
    data = [":images"],
)

py_binary(
    name = "gui",
    srcs = ["gui_main.py"],
    deps = [":other_gui"],
    imports = [":other_gui"] ,
    main = "gui_main.py"
)

py_test(
  name = "denarii_gui_tests",
  srcs = ["denarii_gui_tests.py"],
  deps = [":other_gui", ":testing_gui_elements"],
  imports = [":other_gui", ":testing_gui_elements"],
  args = ["--denarii_testing=True"],
  size = "small",
)


proto_library(
    name = "identifier_proto",
    srcs = ["identifier.proto"],
    deps = [],
)

py_proto_library(
    name = "identifier_py_proto",
    srcs = ["identifier.proto"],
)

java_proto_library(
  name = "identifier_java_proto",
  deps = [":identifier_proto"],
)

cc_proto_library(
  name= "identifier_cc_proto",
  deps = [":identifier_proto"],
)

py_proto_library(
  name = "gui_user_py_proto",
  srcs = ["gui_user.proto"],
  deps = [":wallet_py_proto"],
)

proto_library(
  name = "gui_user_proto",
  srcs = ["gui_user.proto"],
  deps = [":wallet_proto"],
)

cc_proto_library(
  name = "wallet_cc_proto",
  deps = [":wallet_proto"],
)

java_proto_library(
  name = "wallet_java_proto",
  deps = [":wallet_proto"], 
)

py_proto_library(
  name = "wallet_py_proto",
  srcs = ["wallet.proto"],
  deps = [":identifier_py_proto"],
)

proto_library(
  name = "wallet_proto",
  srcs = ["wallet.proto"],
  deps = [":identifier_proto"]
)
