
package(default_visibility = ["//visibility:public"])

filegroup(
  name = "images", 
  srcs = ["red_x.png", "plus_icon.png"]
)

filegroup(
  name = "binaries",
  srcs = ["denarii_wallet_rpc_server", "denariid"]
)

py_library(
  name = "constants",
  srcs = ["constants.py"],
  deps = [":workspace_path_finder"],
  imports = [":workspace_path_finder"]
)

py_library(
  name = "input_pattern_validator", 
  srcs = ["input_pattern_validator.py"],
  deps = [":constants"],
  imports = [":constants"]
)

py_library(
  name = "workspace_path_finder",
  srcs = ["workspace_path_finder.py"],
  deps = [],
  imports = []
)

py_library(
  name = "testing_gui_elements",
  srcs = glob(["denarii_testing*.py"]), 
  deps = [":constants"], 
  imports = [":constants"],
)

py_library(
  name = "testing_clients", 
  srcs = ["denarii_client_testing.py", "denarii_mobile_client_testing.py"],
  deps = [":constants"], 
  imports = [":constants"],
)

py_library(
  name = "clients",
  srcs = ["denarii_client.py", "denarii_mobile_client.py"],
  deps = [":workspace_path_finder"],
  imports = [":workspace_path_finder"]
)

py_library(
    name = "other_gui",
    srcs = glob(
      [
      "*.py"
      ], exclude = [
        "gui_main.py", "*_pb2.py", "*test*.py", "constants.py", "input_pattern_validator.py"
        "workspace_path_finder.py", "denarii_client.py", "denarii_mobile_client.py"
    ]),
    deps = [":testing_clients", ":clients", ":input_pattern_validator"],
    imports = [":testing_clients", ":clients", ":input_pattern_validator"], 
    data = [":images", ":binaries"],
)

py_binary(
    name = "gui",
    srcs = ["gui_main.py"],
    deps = [":other_gui"],
    imports = [":other_gui"] ,
    main = "gui_main.py"
)

py_test(
  name = "denarii_gui_tests",
  srcs = ["denarii_gui_tests.py"],
  deps = [":other_gui", ":testing_gui_elements"],
  imports = [":other_gui", ":testing_gui_elements"],
  args = ["--denarii_testing=True"],
  size = "small",
)

py_test(
  name = "denarii_gui_integration_tests",
  srcs = ["denarii_gui_integration_tests.py"],
  deps = [":other_gui", ":testing_gui_elements"],
  imports = [":other_gui", ":testing_gui_elements"],
  args = ["--denarii_testing=True"],
  size = "medium",
)


py_test(
  name = "denarii_gui_e2e_tests",
  srcs = ["denarii_gui_e2e_tests.py"],
  deps = [":other_gui", ":testing_gui_elements"],
  imports = [":other_gui", ":testing_gui_elements"],
  args = ["--denarii_testing=True"],
  size = "enormous",
)

