load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "images",
    srcs = [
        "plus_icon.png",
        "red_x.png",
    ],
)

filegroup(
    name = "binaries",
    srcs = [
        "denarii_wallet_rpc_server",
        "denariid",
    ],
)

py_library(
    name = "constants",
    srcs = ["constants.py"],
    imports = [":workspace_path_finder"],
    deps = [":workspace_path_finder"],
)

py_library(
    name = "input_pattern_validator",
    srcs = ["input_pattern_validator.py"],
    imports = [":constants"],
    deps = [":constants"],
)

py_library(
    name = "workspace_path_finder",
    srcs = ["workspace_path_finder.py"],
    imports = [],
    deps = [],
)

py_library(
    name = "testing_gui_elements",
    srcs = glob(["denarii_testing*.py"]),
    imports = [":constants"],
    deps = [":constants"],
)

py_library(
    name = "testing_clients",
    srcs = [
        "denarii_client_testing.py",
        "denarii_mobile_client_testing.py",
    ],
    imports = [":constants"],
    deps = [":constants"],
)

py_library(
    name = "clients",
    srcs = [
        "denarii_client.py",
        "denarii_mobile_client.py",
    ],
    imports = [":workspace_path_finder"],
    deps = [":workspace_path_finder"],
)

py_library(
    name = "other_gui",
    srcs = glob(
        [
            "*.py",
        ],
        exclude = [
            "gui_main.py",
            "*_pb2.py",
            "*test*.py",
            "constants.py",
            "input_pattern_validator.py",
            "workspace_path_finder.py",
            "denarii_client.py",
            "denarii_mobile_client.py",
        ],
    ),
    data = [
        ":binaries",
        ":images",
    ],
    imports = [
        ":clients",
        ":input_pattern_validator",
        ":testing_clients",
    ],
    deps = [
        ":clients",
        ":input_pattern_validator",
        ":testing_clients",
    ],
)

py_binary(
    name = "gui",
    srcs = ["gui_main.py"],
    imports = [":other_gui"],
    main = "gui_main.py",
    deps = [":other_gui"],
)

py_test(
    name = "denarii_gui_tests",
    size = "small",
    srcs = ["denarii_gui_tests.py"],
    args = ["--denarii_testing=True"],
    imports = [
        ":other_gui",
        ":testing_gui_elements",
    ],
    deps = [
        ":other_gui",
        ":testing_gui_elements",
    ],
)

py_test(
    name = "denarii_gui_integration_tests",
    size = "medium",
    srcs = ["denarii_gui_integration_tests.py"],
    args = ["--denarii_testing=True"],
    imports = [
        ":other_gui",
        ":testing_gui_elements",
    ],
    deps = [
        ":other_gui",
        ":testing_gui_elements",
    ],
)

py_test(
    name = "denarii_gui_e2e_tests",
    size = "enormous",
    srcs = ["denarii_gui_e2e_tests.py"],
    args = ["--denarii_testing=True"],
    imports = [
        ":other_gui",
        ":testing_gui_elements",
    ],
    deps = [
        ":other_gui",
        ":testing_gui_elements",
    ],
)
